while editing input box misalignment fixed and inputbox placeholder content changed

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -201,7 +201,7 @@ form input::placeholder{
     height: 60px;
     position: relative;
     bottom: 16px;
-    left:-28px
+    left:-68px
 }
 
 .editInput{
